Se corrigen smells code