@@ -11,7 +11,10 @@ import com.audiobea.crm.app.commons.mapper.BrandMapper;
 import com.audiobea.crm.app.commons.mapper.HotDealMapper;
 import com.audiobea.crm.app.commons.mapper.ProductMapper;
 import com.audiobea.crm.app.core.exception.NoSuchElementFoundException;
-import com.audiobea.crm.app.dao.product.*;
+import com.audiobea.crm.app.dao.product.IProductDao;
+import com.audiobea.crm.app.dao.product.IProductImageDao;
+import com.audiobea.crm.app.dao.product.IProductRankingDao;
+import com.audiobea.crm.app.dao.product.IProductTypeDao;
 import com.audiobea.crm.app.dao.product.model.IHotDealDao;
 import com.audiobea.crm.app.dao.product.model.Product;
 import com.audiobea.crm.app.dao.product.model.ProductImage;
@@ -29,8 +32,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Random;
+import java.util.Set;
+
+import static com.audiobea.crm.app.utils.ConstantsLog.*;
 
 @Slf4j
 @AllArgsConstructor
@@ -52,10 +60,11 @@ public class ProductServiceImpl implements IProductService {
     private MessageSource messageSource;
 
     @Override
-    public ResponseData<DtoInProduct> getProducts(String productName, String productType, boolean isNewProduct,
-            String brandName, String subBrandName, Integer page, Integer pageSize) {
-        Pageable pageable = PageRequest.of(page, pageSize);
-        log.debug("Marca: {}, SubMarca: {}, ProductType: {}, Nuevo: {}, Page: {}, PageSize: {}", brandName,
+    public ResponseData<DtoInProduct> getProducts(final String productName, final String productType,
+            final boolean isNewProduct,
+            final String brandName, final String subBrandName, final Integer page, final Integer pageSize) {
+        final Pageable pageable = PageRequest.of(page, pageSize);
+        log.debug(LOG_BRAND_SUB_BRAND_TYPE_NEW_PAGE_PAGE_SIZE, brandName,
                 subBrandName, productType, isNewProduct, page, pageSize);
         Page<Product> pageProduct;
         if (StringUtils.isNotBlank(productName)) {
@@ -65,97 +74,55 @@ public class ProductServiceImpl implements IProductService {
         }
         Validator.validatePage(pageProduct, messageSource);
         return new ResponseData<>(pageProduct.getContent()
-                .stream()
-                .map(p -> productMapper.productToDtoInProduct(p))
-                .collect(Collectors.toList()), pageProduct);
+                .stream().map(productMapper::productToDtoInProduct).toList(), pageProduct);
     }
 
     @Override
-    public DtoInProduct getProductById(String productId) {
-        return productMapper.productToDtoInProduct(
-                productDao.findById(productId)
-                        .orElseThrow(() -> new NoSuchElementFoundException(
-                                Utils.getLocalMessage(messageSource,
-                                        I18Constants.NO_ITEM_FOUND.getKey(),
-                                        productId))));
+    public DtoInProduct getProductById(final String productId) {
+        return productMapper.productToDtoInProduct(productDao.findById(productId).orElseThrow(
+                () -> new NoSuchElementFoundException(
+                        Utils.getLocalMessage(messageSource, I18Constants.NO_ITEM_FOUND.getKey(), productId))));
     }
 
     @Transactional
     @Override
-    public DtoInProduct saveProduct(DtoInProduct dtoInProduct) {
-        log.debug("Product: {}", dtoInProduct);
-        Product product = productMapper.productDtoInToProduct(dtoInProduct);
+    public DtoInProduct saveProduct(final DtoInProduct dtoInProduct) {
+        log.debug(LOG_PRODUCT, dtoInProduct);
+        final Product product = productMapper.productDtoInToProduct(dtoInProduct);
         return productMapper.productToDtoInProduct(productDao.save(product));
     }
 
-    private List<ProductImage> setProductImages(Product product) {
-        Set<String> imageNames = new HashSet<>();
-        imageNames.add("product01.png");
-        imageNames.add("product02.png");
-        imageNames.add("product03.png");
-        imageNames.add("product04.png");
-        imageNames.add("product05.png");
-        List<ProductImage> list = new ArrayList<>();
-        int random = new Random().nextInt(5) + 1;
-        int count = 0;
-        for (String imageName : imageNames) {
-            count++;
-            ProductImage image = new ProductImage();
-            image.setImageName(imageName);
-            image.setProductId(product.getId());
-            image.setSelected(count == random);
-            productImageDao.save(image);
-            list.add(image);
-        }
-        return list;
-    }
-
-    private List<ProductRanking> setProductRankings() {
-        List<ProductRanking> list = new ArrayList<>();
-        int random = new Random().nextInt(10) + 1;
-        for (int i = 0; i < random; i++) {
-            int rank = new Random().nextInt(5) + 1;
-            ProductRanking ranking = new ProductRanking();
-            ranking.setRanking(rank);
-            productRankingDao.save(ranking);
-            list.add(ranking);
-        }
-        return list;
-    }
-
     @Transactional
     @Override
-    public DtoInProduct updateProduct(String productId, DtoInProduct product) {
-        productDao.findById(productId)
-                .orElseThrow(() -> new NoSuchElementFoundException(
-                        Utils.getLocalMessage(messageSource, I18Constants.NO_ITEM_FOUND.getKey(), productId)));
+    public DtoInProduct updateProduct(final String productId, final DtoInProduct product) {
+        productDao.findById(productId).orElseThrow(() -> new NoSuchElementFoundException(
+                Utils.getLocalMessage(messageSource, I18Constants.NO_ITEM_FOUND.getKey(), productId)));
         product.setId(productId);
         return productMapper.productToDtoInProduct(productDao.save(productMapper.productDtoInToProduct(product)));
     }
 
     @Transactional
     @Override
-    public void deleteProductById(String productId) {
+    public void deleteProductById(final String productId) {
         productDao.deleteById(productId);
     }
 
     @Transactional
     @Override
-    public DtoInProduct uploadImages(String productId, MultipartFile[] files) {
+    public DtoInProduct uploadImages(final String productId, final MultipartFile[] files) {
         if (StringUtils.isBlank(productId)) {
             return null;
         }
-        Product product = productMapper.productDtoInToProduct(getProductById(productId));
+        final Product product = productMapper.productDtoInToProduct(getProductById(productId));
         if (files != null && files.length > 0) {
-            log.debug("id: {}, files: {}", productId, files.length);
-            log.debug("files: {}", files.length);
-            List<String> imageNames = uploadService.uploadFiles(files);
+            log.debug(LOG_ID_FILES, productId, files.length);
+            log.debug(LOG_FILES, files.length);
+            final List<String> imageNames = uploadService.uploadFiles(files);
             if (imageNames != null && !imageNames.isEmpty()) {
-                log.debug("imageNames: {}", imageNames.size());
-                List<ProductImage> images = new ArrayList<>();
+                log.debug(LOG_IMAGE_NAMES, imageNames.size());
+                final List<ProductImage> images = new ArrayList<>();
                 for (String imageName : imageNames) {
-                    log.debug("Name: {}", imageName);
-                    new ProductImage(imageName);
+                    log.debug(LOG_NAME, imageName);
                     images.add(new ProductImage(imageName));
                 }
                 product.setImages(images);
@@ -168,20 +135,16 @@ public class ProductServiceImpl implements IProductService {
     @Override
     public DtoInHotDeal getHotDeal() {
 
-        return hotdealMapper
-                .hotdealToDtoInHotdeal(
-                        hotDealDao
-                                .findAll().stream().findFirst()
-                                .orElseThrow(() -> new NoSuchElementFoundException(
-                                        Utils.getLocalMessage(messageSource, I18Constants.NO_ITEM_FOUND.getKey(),
-                                                String.valueOf(1L)))));
+        return hotdealMapper.hotdealToDtoInHotdeal(hotDealDao.findAll().stream().findFirst().orElseThrow(
+                () -> new NoSuchElementFoundException(
+                        Utils.getLocalMessage(messageSource, I18Constants.NO_ITEM_FOUND.getKey(),
+                                String.valueOf(1L)))));
     }
 
     @Transactional
     @Override
-    public DtoInHotDeal saveHotDeal(DtoInHotDeal hotDeal) {
+    public DtoInHotDeal saveHotDeal(final DtoInHotDeal hotDeal) {
         hotDealDao.findAll().stream().findFirst().ifPresent(hDeal -> hotDeal.setId(hDeal.getId()));
         return hotdealMapper.hotdealToDtoInHotdeal(hotDealDao.save(hotdealMapper.hotdealDtoInToHotdeal(hotDeal)));
     }
-
 }
